--- a/Django/projeto_hotel/templates/lazerbemestar.html
+++ b/Django/projeto_hotel/templates/lazerbemestar.html
@@ -8,142 +8,121 @@
 </head>
 
 <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-        }
-        h1 {
-            color: #2c3e50;
-        }
-        h2 {
-            color: #2980b9;
-        }
-        ul {
-            margin: 10px 0;
-        }
-        img{
-      width: 500px;
-      display: flex;
 
-    }
+        .container {
+        max-width: 1300px;
+        margin: auto;
+        background: white;
+        padding: 30px;
+        border-radius: 5px;   
+         }
+
+      h2 {
+        text-align: center;
+        font-size: 40px;
+        color: rgb(200, 19, 19);
+        padding-bottom: 20px;
+        padding-left: 7px;
+        padding-top: 7px;
+        text-shadow: 0px -1px 1px black;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+      }
+
+      h3{
+        font-size: 30px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: rgb(106, 16, 16);
+
+      }
+
+      h4{
+        font-size: 40px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: rgb(106, 16, 16);
+
+      }
+
+
+
+
+      p{
+        font-size: 20px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: rgb(106, 16, 16);
+
+      }
+
+      #li{
+        font-size: 17px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: rgb(106, 16, 16);
+
+      }
+
+      a{
+        color: rgb(106, 16, 16);
+
+      }
+        
+      #ul {
+        margin: 10px 0;
+      }
+
+      img{
+        width: 500px;
+         display: flex;
+       }
+
+  
 </style>
 
 <body>
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/home"><b>Hotel Estrela do Mar</b></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarScroll">
-        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/home">Início</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/lazerbemestar">Lazer e Bem-Estar</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/aluguelcarro">Aluguel de Carro</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/feedback">Tem alguma dúvida? Fale conosco!</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true"> &#11088;&#65039; &#11088; &#65039;&#11088;&#65039;&#11088;&#65039; &#11088;&#65039;</a>
-          </li>
-          <a href="/cadastro" class="btn btn-outline-primary">Faça sua Reserva!</a>
-        </ul>
-        
-      </div>
-
-      <div class="row">
-        <div class="col">
-          <img src="https://www.serhsnatalgrandhotel.com/content/imgsxml/galerias/panel_gallery/1/serhsnatalgh17.5247b546.jpg" alt="Piscina do Hotel Estrela do Mar"  width="400px" height="400px">
-        </div>
-        <div class="col">
-          <img src="https://images.neobookings.com/1920x1080/cms/hoteltorredelmar.com/section/piscina-infinity-exterior-en-forma-de-playa/pics/piscina-infinity-exterior-en-forma-de-playa-lem6rjr4gn.jpg" alt="Piscina do Hotel Estrela do Mar" width="400px" height="400px">
-        </div>
-
-        <div class="col">
-          <img src="https://www.piscine-verona.it/wp-content/uploads/2018/07/piscina-hotel.jpg" alt="Piscina do Hotel Estrela do Mar"  width="400px" height="400px">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/home"><b>Hotel Estrela do Mar</b></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarScroll">
+          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+            <li id="li2" class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/home">Início</a>
+            </li>
+            <li id="li2" class="nav-item">
+              <a class="nav-link" href="/lazerbemestar">Lazer e Bem-Estar</a>
+            </li>
+            <li id="li2" class="nav-item">
+              <a class="nav-link" href="/aluguelcarro">Aluguel de Carro</a>
+            </li>
+            <li id="li2" class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                
+              </a>
+              <ul class="dropdown-menu">
+                <li id="li2" ><a class="dropdown-item" href="/feedback">Tem alguma dúvida? Fale conosco!</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a id="a3" class="nav-link disabled" aria-disabled="true"> &#11088;&#65039; &#11088; &#65039;&#11088;&#65039;&#11088;&#65039; &#11088;&#65039;</a>
+            </li>
+            <a href="/cadastro" class="btn btn-outline-danger">Faça sua Reserva!</a>
+          </ul>
+          
         </div>
       </div>
+    </nav>
 
-      <div class="row">
-        <div class="col">
-          <h3>Academia</h3>
-          <p>Mantenha sua rotina de exercícios em nossa moderna academia, equipada com os melhores aparelhos.</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col">
-          <img src="https://blog.casadofitness.com.br/wp-content/uploads/2022/12/BENEFICIOS-DE-TER-UMA-ACADEMIA-EM-UM-HOTEL-URBANO%E2%80%8B.jpg" alt="Academia do Hotel Estrela do Mar" class="img-fluid">
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col">
-          <h3>Spa</h3>
-          <p>Experimente nossos tratamentos de spa, com massagens relaxantes e terapias de beleza.</p>
-          <img src="https://vejasp.abril.com.br/wp-content/uploads/2016/12/032_hotel-unique_-spa-room.jpg?quality=70&strip=all" alt="Spa do Hotel Estrela do Mar" class="img-fluid">
-        </div>
-
-        <div class="col">
-          <h3>Sauna</h3>
-          <p>Desfrute de momentos de tranquilidade em nossa sauna seca e úmida.</p>
-          <img src="https://thumbs.dreamstime.com/b/seque-sauna-finlandesa-com-forno-dobro-e-grande-janela-panor%C3%A2mico-109121013.jpg" alt="Sauna do Hotel Estrela do Mar" class="img-fluid">
-
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col">
-          <h3>Quadras</h3>
-          <p>Aproveite nossas quadras para uma partida amistosa com amigos!</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col">
-          <img  src="https://s2.glbimg.com/kmNAAvXAmYAbpv2bK3C2HWxGOwo=/top/i.glbimg.com/og/ig/infoglobo1/f/original/2016/09/05/quadra_2012_04.jpg" alt="Quadras do Hotel Estrela do Mar" class="img-fluid">
-        </div>
-
-        <div class="col">
-          <img src="https://midias.correiobraziliense.com.br/_midias/jpg/2023/07/12/675x450/1_mj1207_02-28495127.jpg?20230712231512?20230712231512" alt="Quadras do Hotel Estrela do Mar" class="img-fluid">
-        </div>
-      </div>
-
-      <div class="row">
-        <p></p>
-        <div class="col">
-          <img src="https://www.castelopalacehotel.com.br/uploads/20141008133820.jpg" alt="Quadras do Hotel Estrela do Mar" class="img-fluid">
-        </div>
-
-        <div class="col">
-          <img src="https://www.serhsnatalgrandhotel.com/content/imgsxml/galerias/panel_gallery/1/t-quadra-poliespotiva604.jpg" alt="Quadras do Hotel Estrela do Mar" class="img-fluid">
-        </div>
-      </div>
-
-    </div>
-  </nav>
+  <div class="container">
 
   <section id="lazer-e-bem-estar">
-    <h2>Lazer e Bem-Estar</h2>
+    <h2><b>Lazer e Bem-Estar</b></h2>
     
     <div class="row">
       <div class="col-md-6">
         <h3>Piscina</h3>
         <p>Relaxe e aproveite nossa piscina climatizada, com vista panorâmica para a cidade.</p>
-        <img src="https://cdn2.paraty.es/estival-eldorado/images/3bdf088162091ea=s1900" alt="Piscina do Hotel Estrela do Mar" class="img-fluid" width="600">
         <img src="https://www.serhsnatalgrandhotel.com/content/imgsxml/galerias/panel_gallery/1/serhsnatalgh17.5247b546.jpg" alt="Piscina do Hotel Estrela do Mar" class="img-fluid"  >
       </div>
 
@@ -174,31 +153,37 @@
       <div class="col-md-6">
         <h3>Quadra de Tênis</h3>
         <p>Aproveite nossa quadra de tênis para uma partida amistosa com amigos.</p>
-        <img src="https://s2.glbimg.com/kmNAAvXAmYAbpv2bK3C2HWxGOwo=/top/i.glbimg.com/og/ig/infoglobo1/f/original/2016/09/05/quadra_2012_04.jpg
-        " alt="Quadra de Tênis do Hotel Estrela do Mar" class="img-fluid">
-        <img src="https://midias.correiobraziliense.com.br/_midias/jpg/2023/07/12/675x450/1_mj1207_02-28495127.jpg?20230712231512?20230712231512" alt="Quadra de Tênis do Hotel Estrela do Mar" class="img-fluid">
-        <img src="https://www.castelopalacehotel.com.br/uploads/20141008133820.jpg
-        " alt="Quadra de Tênis do Hotel Estrela do Mar" class="img-fluid">
-        <img src="https://www.serhsnatalgrandhotel.com/content/imgsxml/galerias/panel_gallery/1/t-quadra-poliespotiva604.jpg" alt="Quadra de Tênis do Hotel Estrela do Mar" class="img-fluid">
+        <img src="https://s2.glbimg.com/kmNAAvXAmYAbpv2bK3C2HWxGOwo=/top/i.glbimg.com/og/ig/infoglobo1/f/original/2016/09/05/quadra_2012_04.jpg" alt="Quadra de Tênis do Hotel Estrela do Mar" class="img-fluid">
       </div>
+    
+      <div class="col-md-6">
+        <h3>Quadra de Areia</h3>
+        <p>Na nossa quadra de areia, a diversão é garantida com sua família e amigos, momentos inesquecíveis à beira-mar!</p>
+        <img src="https://midias.correiobraziliense.com.br/_midias/jpg/2023/07/12/675x450/1_mj1207_02-28495127.jpg?20230712231512?20230712231512" alt="Quadra de Tênis do Hotel Estrela do Mar" class="img-fluid">
+      </div>
+    </div>
+    
 
   </section>
   
-  <h2>Direitos do Cliente:</h2>
-  <ul>
-      <li><strong>Acesso às Áreas de Lazer:</strong> Todos os hóspedes têm o direito de utilizar as áreas de lazer do hotel, como piscinas, academias, spas e outros espaços recreativos.</li>
-      <li><strong>Horários de Funcionamento:</strong> As áreas de lazer possuem horários específicos de funcionamento, que devem ser respeitados.</li>
-      <li><strong>Regras de Uso:</strong> Algumas áreas podem ter regras específicas para garantir a segurança e o conforto de todos os hóspedes.</li>
-      <li><strong>Atividades e Eventos:</strong> O hotel pode oferecer atividades e eventos especiais nas áreas de lazer.</li>
+  <h4>Direitos do Cliente:</h2>
+  <ul id="ul">
+      <li id="li"><strong>Acesso às Áreas de Lazer:</strong> Todos os hóspedes têm o direito de utilizar as áreas de lazer do hotel, como piscinas, academias, spas e outros espaços recreativos.</li>
+      <li id="li"><strong>Horários de Funcionamento:</strong> As áreas de lazer possuem horários específicos de funcionamento, que devem ser respeitados.</li>
+      <li id="li"><strong>Regras de Uso:</strong> Algumas áreas podem ter regras específicas para garantir a segurança e o conforto de todos os hóspedes.</li>
+      <li id="li"><strong>Atividades e Eventos:</strong> O hotel pode oferecer atividades e eventos especiais nas áreas de lazer.</li>
   </ul>
 
-  <h2>Dicas para Melhor Aproveitamento:</h2>
-  <ul>
-      <li><strong>Reserve com Antecedência:</strong> Se houver atividades que exigem reserva, agende com antecedência.</li>
-      <li><strong>Explore as Opções:</strong> Aproveite todas as comodidades disponíveis.</li>
-      <li><strong>Feedback:</strong> Informe a equipe do hotel sobre sugestões ou problemas nas áreas de lazer.</li>
+  <h4>Dicas para Melhor Aproveitamento:</h2>
+  <ul id="ul">
+      <li id="li"><strong>Reserve com Antecedência:</strong> Se houver atividades que exigem reserva, agende com antecedência.</li>
+      <li id="li"><strong>Explore as Opções:</strong> Aproveite todas as comodidades disponíveis.</li>
+      <li id="li"><strong>Feedback:</strong> Informe a equipe do hotel sobre sugestões ou problemas nas áreas de lazer.</li>
   </ul>
 
+
+  
+  </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
