--- a/Django/projeto_hotel/templates/aluguelcarro.html
+++ b/Django/projeto_hotel/templates/aluguelcarro.html
@@ -14,12 +14,23 @@
           width: 300px;
           text-align: center;
           margin: 20px;
-          box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 2px 10px rgba(193, 8, 8, 0.158);
           padding: 10px;
           box-sizing: border-box;
           display: inline-block;
       
       }
+
+      .car-container:hover{
+        -webkit-transform: scale(0.0);
+        -moz-transform: scale(1.1);
+       -o-transform: scale(1.1);
+       -ms-transform: scale(2.2);
+       transform: scale(1.1);
+       box-shadow: 0 2px 8px rgba(114, 4, 4, 0.664);
+  
+      }
+
       .car-image {
           width: 100%;
           border-top-left-radius: 8px;
@@ -27,7 +38,7 @@
       }
       .car-price {
           font-size: 24px;
-          color: #28a745;
+          color: #8d1919;
           margin: 10px 0;
       }
 
@@ -35,6 +46,45 @@
             max-width: 100%; /* Ajusta a imagem para não ultrapassar a div */
             height: auto; /* Mantém a proporção da imagem */
         }
+
+        .container {
+        max-width: 1300px;
+        margin: auto;
+        background: white;
+        padding: 30px;
+        border-radius: 5px;   
+         }
+
+      h1 {
+        font-size: 46px;
+        color: rgb(200, 19, 19);
+        padding-bottom: 20px;
+        padding-left: 11px;
+        text-shadow: 0px -1px 1px black;
+      }
+
+      #p{
+        font-size: 25px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding-bottom: 10px;
+        padding-left: 70px;
+        padding-right: 300px;
+        color: rgb(106, 16, 16);
+        
+        
+
+      }
+
+      #h2{
+        font-size: 27px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding-bottom: 10px;
+        padding-left: 70px;
+        padding-right: 300px;
+        color: rgb(106, 16, 16);
+
+      }
+        
       
   </style>
 
@@ -76,60 +126,29 @@
       </div>
     </div>
   </nav>
-                
-          <h1>Aluguel de Carros</h1>
+             
+  <div class="container">
+    
+    <h1><b>Aluguel de Carros</b></h1>
 
-          <p> Oferecemos 3 variedade de veículos para atender às suas necessidades do hóspede hospedado em nosso hotel, seja para viagens de negócios ou lazer!</p>
+    <p id="p">Para nossos hóspedes, temos um aluguel de carro especial! Reserve um veículo durante sua estadia e ganhe um desconto exclusivo. Com nosso serviço de aluguel de carros, você pode explorar a cidade no seu próprio ritmo. Visite pontos turísticos, descubra restaurantes escondidos e aproveite passeios fora do comum. Nossos veículos são confortáveis, seguros e prontos para levá-lo aonde você quiser. Não perca a oportunidade de viver uma experiência única.</p>
 
-          <form>
-            <label for="modelo">Opções de Carro:</label>
-            <select id="modelo" name="modelo">
-              <option value="logan">Renault Logan</option>
-              <option value="nivus">Volkswagen Nivus</option>
-              <option value="duster">Renault Duster</option>
-              <option value="kwid">Renault Kwid</option>
-            </select>
-
-            <label for="modelo">Forma de Pagamento:</label>
-            <select id="modelo" name="modelo">
-              <option value="cartao">Cartão</option>
-              <option value="dinheiro">Dinheiro</option>
-              <option value="pix">Pix</option>
-            </select>
-
-            <label for="dataInicio">Data de Início:</label>
-            <input type="date" id="dataInicio" name="dataInicio">
-          
-            <label for="dataFim">Data de Fim:</label>
-            <input type="date" id="dataFim" name="dataFim">
-          
-            <label for="dataFim">Deseja incluir motorista?</label>
-            <label for="yes-option">Sim</label>
-            <input id="yes-option" type="radio" name="hotel-stay" />
-            <label for="no-option">Não</label>
-            <input id="yes-option" type="radio" name="hotel-stay" />
-
-            
-            
-          
-          
-            <input type="submit" value="Reservar">
-          </form>
+    <h2 id="h2">Escolha seu carro e clique no link abaixo do carro para fazer sua reserva!</h2>
 
 
           {% for carro in carros %}
           
           <div class="car-container">
-            <img src="{{ carro.foto }}" alt="Carro" class="car-image">
+            <img src="{{ carro.imagem.url }}" alt="Carro" class="car-image">
              <h2>{{ carro.nome }}</h2>
              <p class="car-price">R$ {{ carro.valor }}</p>
 
-             <a href="{% url 'reservar' carro.id %}">Reservar</a>
+             <a href="{% url 'reservar' carro.id %}" class="btn btn-outline-danger">Reservar</a>
          </div>
           
 
           {% endfor %}
-    
+  </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
     </html>
