--- a/Django/projeto_hotel/templates/cadastro.html
+++ b/Django/projeto_hotel/templates/cadastro.html
@@ -82,15 +82,6 @@
   <label for="nome">Nome Completo</label>
   <input type="text" id="nome" name="nome" required>
 
-  <label for="nome">E-mail</label>
-  <input type="text" id="email" name="email" required>
-
-  <label for="nome">Senha</label>
-  <input type="text" id="senha" name="senha" required>
-
-  <label for="nome">Confirme a Senha</label>
-  <input type="text" id="confirme" name="confirme" required>
-
   <label for="telefone">Telefone</label>
   <input type="tel" id="telefone" name="telefone" required>
 
@@ -100,50 +91,24 @@
   <label for="endereco">Cidade</label>
   <input type="text" id="cidade" name="cidade" required>
 
-  <label for="tipo">Estado</label>
+  <label for="endereco">Estado</label>
+  <input type="text" id="estado" name="estado" required>
+
+
+  <label for="tipo">Tipo documento</label>
   <select id="tipo" name="tipo" required>
-  <option selected>Escolher...</option>
-  <option>Acre</option>
-  <option>Alagoas</option>
-  <option>Amapá</option>
-  <option>Amazonas</option>
-  <option>Bahia</option>
-  <option>Ceará</option>
-  <option>Distrito Federal</option>
-  <option>Espírito Santo</option>
-  <option>Goiás</option>
-  <option>Maranhão</option>
-  <option>Mato Grosso</option>
-  <option>Mato Grosso do Sul</option>
-  <option>Minas Gerais</option>
-  <option>Pará</option>
-  <option>Paraíba</option>
-  <option>Paraná</option>
-  <option>Pernambuco</option>
-  <option>Piauí</option>
-  <option>Rio de Janeiro</option>
-  <option>Rio Grande do Norte</option>
-  <option>Rio Grande do Sul</option>
-  <option>Rondônia</option>
-  <option>Roraima</option>
-  <option>Santa Catarina</option>
-  <option>São Paulo</option>
-  <option>Sergipe</option>
-  <option>Tocantins</option>
+    <option selected>Tipo documento</option>
+    <option>CPF</option>
+    <option>RG</option>
+    <option>CN</option>
+    <option>PASSAPORTE</option>
+    <option>CIE</option>
+    <option>CI</option>
+    <option>DNI</option>
+  </select>
 
-</select>
-
-<label for="tipo">Tipo documento</label>
-<select id="tipo" name="tipo" required>
-<option selected>Tipo documento</option>
-<option>CPF</option>
-<option>RG</option>
-<option>CN</option>
-<option>PASSAPORTE</option>
-<option>CIE</option>
-<option>CI</option>
-<option>DNI</option>
-</select>
+  <label for="documento">Documento</label>
+  <input type="text" id="documento" name="documento" required>
 
   <label for="data">Check-in</label>
   <input type="date" id="data" name="data" required>
@@ -151,7 +116,7 @@
   <label for="data">Check-out</label>
   <input type="date" id="data" name="data" required>
 
-  <button type="button" class="btn btn-outline-danger">Voltar</button>
+  <a href="/home" class="btn btn-outline-danger">Voltar</a>
   <button type="submit" class="btn btn-outline-success">Reservar</button>
 
 </form>
