--- a/Django/projeto_hotel/templates/form_reserva_carro_confirmacao.html
+++ b/Django/projeto_hotel/templates/form_reserva_carro_confirmacao.html
@@ -81,9 +81,10 @@
           <h2>Carro selecionado: </h2>
 
           <div class="car-container">
-            <img src="{{ carro.foto }}" alt="Carro" class="car-image">
+            <img src="{{ carro.imagem.url }}" alt="Carro" class="car-image">
              <h2>{{ carro.nome }}</h2>
              <p class="car-price">R$ {{ carro.valor }}</p>
+             <p> {{ mensagem }}</p>
          </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
