--- a/Django/projeto_hotel/templates/feedback.html
+++ b/Django/projeto_hotel/templates/feedback.html
@@ -9,7 +9,8 @@
 
 <style>
 .container {
-  max-width: 1300px;
+  max-width: 1000px;
+  max-height: 100px;
   margin: auto;
   background: white;
   padding: 30px;
