--- a/Django/projeto_hotel/templates/form_reserva_carro.html
+++ b/Django/projeto_hotel/templates/form_reserva_carro.html
@@ -118,6 +118,7 @@
   </nav>
                 
       <div class="container">
+        
           <h1><b>Reservando Carro</b></h1>
           <h2 id="h2"><b>Carro selecionado  &#8595;</b></h2>
 
@@ -144,6 +145,16 @@
 
             <label for="" class="form-label">Forma de Pagamento</label>
             <input type="text" class="form-control" id="inputEmail4" name="forma_pagamento">
+
+            <br>
+
+            <label for="" class="form-label">Inicio de Reserva</label>
+            <input type="date" class="form-control" id="data" name="incio_reserva" required>
+
+            <br>
+
+            <label for="" class="form-label">Fim de Reserva</label>
+            <input type="date" class="form-control" id="data" name="fim_reserva" required>
 
             <br>
 
