--- a/Django/projeto_hotel/templates/home.html
+++ b/Django/projeto_hotel/templates/home.html
@@ -151,21 +151,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="https://th.bing.com/th/id/R.98796dec8446fdfd4f4dc3538a734989?rik=DWcPcl90oPepTg&riu=http%3a%2f%2fbestlocationhotels.com%2fwp-content%2fuploads%2f2020%2f04%2fPalace-Praia-Hotel.jpg&ehk=TWmY48ZNeFUr9tsWpnO2Mr0g%2bm952g%2b72FuLeREl3GM%3d&risl=&pid=ImgRaw&r=0" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="https://www.serhsnatalgrandhotel.com/content/imgsxml/galerias/panel_gallery/1/serhsnatalgh17.5247b546.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="https://blog.casadofitness.com.br/wp-content/uploads/2022/12/BENEFICIOS-DE-TER-UMA-ACADEMIA-EM-UM-HOTEL-URBANO%E2%80%8B.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
