--- a/Django/projeto_hotel/templates/cadastro.html
+++ b/Django/projeto_hotel/templates/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hotel Estrela do Mar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <style>
@@ -25,7 +25,8 @@
 
   h1 {
       text-align: center;
-      color: rgb(177, 45, 45);
+      color: rgb(200, 19, 19);
+      text-shadow: 0px -1px 1px black;
   }
 
   label {
@@ -65,18 +66,34 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarScroll">
         <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-         
-          
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/home">Início</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/lazerbemestar">Lazer e Bem-Estar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/aluguelcarro">Aluguel de Carro</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="/feedback">Tem alguma dúvida? Fale conosco!</a></li>
+            </ul>
+          </li>
           <li class="nav-item">
             <a class="nav-link disabled" aria-disabled="true"> &#11088;&#65039; &#11088; &#65039;&#11088;&#65039;&#11088;&#65039; &#11088;&#65039;</a>
           </li>
-          
+        
+        </ul>
         
       </div>
     </div>
   </nav>
 <div class="container">
-<h1>Cadastro</h1>
+<h1><b>Reserva</b></h1>
 <form action="{% url 'fazer_cadastro' %}" method="post">
   {% csrf_token %}
 
