--- a/Django/projeto_hotel/templates/cadastro_confirmacao.html
+++ b/Django/projeto_hotel/templates/cadastro_confirmacao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hotel Estrela do Mar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <style>
@@ -14,19 +14,49 @@
       
   }
 
-  .container {
-      max-width: 1000px;
-      margin: auto;
-      background: white;
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
+ .container {
+        max-width: 1300px;
+        margin: auto;
+        background: white;
+        padding: 30px;
+        border-radius: 5px; 
+          
+         }
 
-  h1 {
-      text-align: center;
-      color: rgb(177, 45, 45);
-  }
+      h1 {
+        font-size: 46px;
+        color: rgb(200, 19, 19);
+        padding-top: 50px;
+        padding-bottom: 50px;
+        text-align: center;
+        text-shadow: 0px -1px 1px black;
+      }
+
+      p{
+        font-size: 25px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding-bottom: 10px;
+        padding-left: 250px;
+        padding-right: 300px;
+        color: rgb(106, 16, 16);
+        
+        
+
+      }
+
+      #a{
+        text-align: center;
+        font-size: 19px;
+        padding-top: 10px;
+        padding-left: 610px;
+        padding-right: 600px;
+        padding-bottom: 10px;
+      }
+
+      #a:hover{
+        box-shadow: 0px 10px 10px rgb(162, 14, 14);
+
+      }
 
   label {
       display: block;
@@ -75,11 +105,22 @@
       </div>
     </div>
   </nav>
-<div class="container">
-<h1>Cadastro</h1>
+  <div class="container">
+    <h1><b>Reserva Confirmada &#10003;</b></h1>
 
-<h2>{{mensagem}}</h2>
-</div>
+    <p>Temos o prazer de informar que sua reserva no Hotel Estrela do Mar foi concluída com sucesso! Agradecemos por escolher-nos para a sua estadia.</p>
+
+    <p>Estamos ansiosos para recebê-lo(a) e proporcionar uma experiência memorável. Se precisar de mais informações ou tiver solicitações especiais, não hesite em nos contatar. </p>
+
+    <p>Agradecemos pela sua preferência e desejamos uma ótima estadia!</p>
+
+    <a id="a" href="" class="btn btn-outline-danger">Voltar</a>
+
+  
+
+       
+  
+  </div>
 
     
 
