--- a/Django/projeto_hotel/templates/form_reserva_carro_confirmacao.html
+++ b/Django/projeto_hotel/templates/form_reserva_carro_confirmacao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hotel Estrela do Mar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
@@ -35,6 +35,49 @@
             max-width: 100%; /* Ajusta a imagem para não ultrapassar a div */
             height: auto; /* Mantém a proporção da imagem */
         }
+
+        .container {
+        max-width: 1300px;
+        margin: auto;
+        background: white;
+        padding: 30px;
+        border-radius: 5px;   
+         }
+
+      h1 {
+        font-size: 46px;
+        color: rgb(200, 19, 19);
+        padding-top: 50px;
+        padding-bottom: 50px;
+        text-align: center;
+        text-shadow: 0px -1px 1px black;
+      }
+
+      p{
+        font-size: 25px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding-bottom: 10px;
+        padding-left: 250px;
+        padding-right: 300px;
+        color: rgb(106, 16, 16);
+        
+        
+
+      }
+
+      #a{
+        text-align: center;
+        font-size: 19px;
+        padding-top: 10px;
+        padding-left: 610px;
+        padding-right: 600px;
+        padding-bottom: 10px;
+      }
+
+      #a:hover{
+        box-shadow: 0px 10px 10px rgb(162, 14, 14);
+
+      }
       
   </style>
 
@@ -44,7 +87,7 @@
     
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/home"><b>Hotel Estrela do Mar</b></a>
+      <a class="navbar-brand" href=""><b>Hotel Estrela do Mar</b></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -76,17 +119,23 @@
       </div>
     </div>
   </nav>
-                
-          <h1>Confirmacao de reserva</h1>
-          <h2>Carro selecionado: </h2>
+        
+        <div class="container">
+          <h1><b>Reserva Confirmada &#10003;</b></h1>
 
-          <div class="car-container">
-            <img src="{{ carro.imagem.url }}" alt="Carro" class="car-image">
-             <h2>{{ carro.nome }}</h2>
-             <p class="car-price">R$ {{ carro.valor }}</p>
-             <p> {{ mensagem }}</p>
-         </div>
+          <p>Temos o prazer de informar que sua reserva de carro no Hotel Estrela do Mar foi concluída com sucesso! Agradecemos por escolher nossos serviços.</p>
 
+          <p>Estamos ansiosos para atendê-lo(a) e garantir que sua experiência de aluguel seja a melhor possível. Se precisar de mais informações ou tiver solicitações especiais, não hesite em nos contatar.</p>
+
+          <p>Agradecemos pela sua preferência</p>
+
+          <a id="a" href="/aluguelcarro" class="btn btn-outline-danger">Voltar</a>
+
+        
+
+             
+        
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
     </html>
